# MapsTorch

./: .gitignore  LICENSE  MANIFEST.in  README.md  env.yml  pixi.toml  pyproject.toml  requirements.txt  setup.py
apps/: explore_dataset.py  generate_maps.py  guess_elements.py  optimize_parameters.py  periodic_table_widget.py  visualize_data.py  visualize_maps.py
maps_torch/: __init__.py  bkg.py  constant.py  default.py  io.py  map.py  opt.py  plot.py  util.py
mapstorch/: bkg.py  constant.py  default.py  io.py  map.py  opt.py  plot.py  util.py
scripts/: adjust_branch_ratios.py  fit_spec.py
